# Smart-parking-system-with-ANPR-and-Face-Recognition

./: .env.example  .gitignore  README.md  YOLO_GUIDE.md  data.yaml  lfw_insightface_benchmark.ipynb  main.py  pyproject.toml  requirements.txt  test_ocr_only.py  test_ocr_quick.py  train_plate_detector.py
core/: config.py
core/anpr/: detector.py  ocr.py
core/api/: main.py
core/db/: database.py
core/decision/: verifier.py
core/face/: detector.py  recognizer.py
core/session/: manager.py  pricing.py
core/ui/: list_cameras.py  tk_app.py
models/plate_detector/: args.yaml  results.csv
