[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "insightface>=0.7",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "paddleocr>=2.7",
    "pillow>=10.0.0",
    "pydantic>=2.6",
    "python-multipart>=0.0.7",
    "rapidfuzz>=3.0",
    "sqlalchemy>=2.0",
    "torch>=2.3",
    "ultralytics>=8.2",
    "uvicorn[standard]>=0.24",
]
